k8s/psql_client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: psql-client
  labels:
    app: psql-client
spec:
  containers:
    - name: psql-client
      image: postgres:14
      stdin: true
      tty: true
  restartPolicy: Never
