k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: lanchonete-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: "nginx"
  rules:

  - host: tech-challenge-lanchonete.com
    http:
      paths:
        - path: /orders(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: orders-service
              port:
                number: 8080
        - path: /webhooks(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: orders-service
              port:
                number: 8080
        - path: /customers(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: customers-service
              port:
                number: 8080
        - path: /products(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: products-service
              port:
                number: 8080
        - path: /category(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: products-service
              port:
                number: 8080
        - path: /orders(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: orders-service
              port:
                number: 8080
